fix TestSettlement
