# api-spec/openapi/swagger/introspector/v1/service.openapi.json
@@ -236,12 +236,6 @@
           },
           "signedIntent": {
             "$ref": "#/components/schemas/Intent"
-          },
-          "vtxoTree": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/TxTreeNode"
-            }
           }
         }
       },
